--- a/PrepCoreAudio/Base.lproj/Main.storyboard
+++ b/PrepCoreAudio/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--First-->
+        <!--Songs-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModule="testttt" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModule="PrepCoreAudio" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -19,33 +19,30 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AudioFileCell" id="yVo-dA-g1t" customClass="AudioTableViewCell" customModule="testttt" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AudioFileCell" id="yVo-dA-g1t" customClass="AudioTableViewCell" customModule="PrepCoreAudio" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yVo-dA-g1t" id="Fh9-4x-cnV">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="audioFileName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="asU-ab-o8P">
-                                                    <rect key="frame" x="20" y="11" width="374" height="21.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JuF-FY-eLX">
+                                                    <rect key="frame" x="20" y="11" width="374" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="asU-ab-o8P" secondAttribute="bottom" id="04M-UU-1w0"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="asU-ab-o8P" secondAttribute="trailing" id="3g9-Sg-rK1"/>
-                                                <constraint firstItem="asU-ab-o8P" firstAttribute="top" secondItem="Fh9-4x-cnV" secondAttribute="topMargin" id="CQI-YX-OaI"/>
-                                                <constraint firstItem="asU-ab-o8P" firstAttribute="leading" secondItem="Fh9-4x-cnV" secondAttribute="leadingMargin" id="Nlp-Xm-srV"/>
-                                                <constraint firstItem="asU-ab-o8P" firstAttribute="leading" secondItem="Fh9-4x-cnV" secondAttribute="leadingMargin" id="Tn9-64-dcn"/>
-                                                <constraint firstItem="asU-ab-o8P" firstAttribute="top" secondItem="Fh9-4x-cnV" secondAttribute="topMargin" id="XTU-xr-eKJ"/>
-                                                <constraint firstItem="asU-ab-o8P" firstAttribute="trailing" secondItem="Fh9-4x-cnV" secondAttribute="trailingMargin" id="xQb-q2-Yxf"/>
+                                                <constraint firstItem="JuF-FY-eLX" firstAttribute="top" secondItem="Fh9-4x-cnV" secondAttribute="topMargin" id="2l3-Ct-JvC"/>
+                                                <constraint firstItem="JuF-FY-eLX" firstAttribute="leading" secondItem="Fh9-4x-cnV" secondAttribute="leadingMargin" id="4g0-PH-0KU"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="JuF-FY-eLX" secondAttribute="trailing" id="5om-1L-WEw"/>
+                                                <constraint firstItem="JuF-FY-eLX" firstAttribute="leading" secondItem="Fh9-4x-cnV" secondAttribute="leadingMargin" id="NTH-h2-Rd6"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="JuF-FY-eLX" secondAttribute="bottom" id="Yy2-Fv-lLS"/>
+                                                <constraint firstItem="JuF-FY-eLX" firstAttribute="top" secondItem="Fh9-4x-cnV" secondAttribute="topMargin" id="jgG-sa-xRF"/>
+                                                <constraint firstItem="JuF-FY-eLX" firstAttribute="trailing" secondItem="Fh9-4x-cnV" secondAttribute="trailingMargin" id="rHd-Fd-G7i"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="audioName" destination="asU-ab-o8P" id="NtB-TH-Inq"/>
-                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <sections/>
@@ -56,11 +53,14 @@
                             <constraint firstItem="FrR-1T-RdU" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" id="F7A-mZ-HEU"/>
                             <constraint firstItem="FrR-1T-RdU" firstAttribute="bottom" secondItem="PQr-Ze-W5v" secondAttribute="bottom" id="Qoj-tT-rhF"/>
                             <constraint firstItem="FrR-1T-RdU" firstAttribute="trailing" secondItem="PQr-Ze-W5v" secondAttribute="trailing" id="bcJ-D9-Ry3"/>
+                            <constraint firstItem="FrR-1T-RdU" firstAttribute="bottom" secondItem="PQr-Ze-W5v" secondAttribute="bottom" id="dW7-hp-03E"/>
                             <constraint firstItem="FrR-1T-RdU" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" id="gfD-si-D1F"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="FrR-1T-RdU" secondAttribute="bottom" id="xVI-2a-ouX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="Songs" image="music.note.list" catalog="system" id="acW-dT-cKf"/>
+                    <navigationItem key="navigationItem" id="zoB-Ff-G6w"/>
                     <connections>
                         <outlet property="songTable" destination="FrR-1T-RdU" id="uU9-f5-9v3"/>
                     </connections>
@@ -69,47 +69,61 @@
             </objects>
             <point key="canvasLocation" x="749.27536231884062" y="-320.08928571428572"/>
         </scene>
-        <!--Second-->
+        <!--Settings-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="SecondViewController" customModule="testttt" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" customClass="SecondViewController" customModule="PrepCoreAudio" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Second View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
-                                <rect key="frame" x="106" y="426.5" width="202" height="43"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by SecondViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDk-cv-Gan">
-                                <rect key="frame" x="99.5" y="477.5" width="215" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DDL-sy-u9T">
-                                <rect key="frame" x="259" y="144" width="49" height="31"/>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="DDL-sy-u9T">
+                                <rect key="frame" x="275" y="168" width="49" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="EffectSwitch:forEvent:" destination="8rJ-Kc-sve" eventType="valueChanged" id="hZx-GP-in8"/>
+                                </connections>
                             </switch>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Vi9-Et-E1l">
+                                <rect key="frame" x="239" y="279" width="118" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="EffectSlider:forEvent:" destination="8rJ-Kc-sve" eventType="valueChanged" id="Rot-ZN-JCh"/>
+                                </connections>
+                            </slider>
+                            <button opaque="NO" contentMode="center" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sG6-p9-uMd">
+                                <rect key="frame" x="238" y="370" width="120" height="47"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                <state key="normal" title="Restart Song"/>
+                                <connections>
+                                    <action selector="RestartSong:forEvent:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="OrA-2E-YLO"/>
+                                </connections>
+                            </button>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="7Yc-aq-jpk">
+                                <rect key="frame" x="251" y="521" width="94" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </stepper>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JXH-Pf-eI4">
+                                <rect key="frame" x="251" y="476" width="94" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" adjustable="YES" allowsDirectInteraction="YES"/>
+                                </accessibility>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="NDk-cv-Gan" firstAttribute="top" secondItem="zEq-FU-wV5" secondAttribute="bottom" constant="8" symbolic="YES" id="Day-4N-Vmt"/>
-                            <constraint firstItem="NDk-cv-Gan" firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="JgO-Fn-dHn"/>
-                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
-                            <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
-                    <connections>
-                        <outlet property="testSwitch" destination="DDL-sy-u9T" id="7ew-pO-ew7"/>
-                    </connections>
+                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" id="cPa-gy-q4n"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="360"/>
+            <point key="canvasLocation" x="749.27536231884062" y="359.59821428571428"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -131,7 +145,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="gear" catalog="system" width="64" height="58"/>
+        <image name="music.note.list" catalog="system" width="64" height="56"/>
     </resources>
 </document>
